                                                         -*- coding: utf-8 -*-
Changes with Apache Traffic Server 3.3.1
  *) [TS-1580] Mutex leak plugged.

  *) [TS-1596] Added channel_stats plugin to experimental.
     Author: Conan Wang.

  *) [TS-1607] decouple SSL certificate lookup

  *) [TS-1506] %<cquuh> log symbol will crash TS when requesting a SSL url.
     Author: Conan Wang.

  *) [TS-1594] ProxyMutexPtr and Ptr<ProxyMutex> are identical

  *) [TS-1591] gzip plugin should load relative config file

  *) [TS-1582] C++11 requires space between strings and format specifiers
     Author: Luca Rea

  *) [TS-1491] Browser always prompts for authentication (NTLM).
     Author: Yakov Kopel.

  *) [TS-1553] Detect and build C++11 dependencies

  *) [TS-1576] reload splitdns.config at runtime
     Author: Ethan Lai <yzlai@yahoo.com>

  *) [TS-1551] reload ssl_multicert.config at runtime
     Author: Ethan Lai <yzlai@yahoo.com>

  *) [TS-1572] Plugin response status change can trigger ATS assertion
     Author: Uri Shachar

  *) [TS-1433] to make read from writer work

  *) [TS-1564] fix the rolling of Logs created via the API in plugins
     Author: Craig Forbes <cforbes at qualys dot com>

  *) [TS-1565] TSStringPercentEncode returns one character short in no-op
   case (no encoding needed). Author: Thach Tran <tranngocthachs at gmail
   dot com>.

  *) [TS-1561] Plugin esi - Enhancements on ESI plugin
     Author: Kit Chan <chanshukit at gmail dot com>
             Yu Qing <zhuangyuan at taobao dot com>

  *) [TS-1560] plugins need memory barriers for ARM

  *) [TS-1558] use_client_addr breaks control over upstream HTTP protocol
   version.

  *) [TS-207] Add raw disk support for FreeBSD

  *) [TS-1494] sslCa should be set NULL after parseConfigLine in
   SSLCertLookup.cc.

  *) [TS-1382] make jtest 64bit nice

  *) [TS-1550] remove unnecessary USE_CONFIG_PROCESSOR define

  *) [TS-1549] Drop MakeErrorVA, enabling body_factory by default
