@@ -49,9 +49,7 @@ void *config_string_alloc_cb(void *data, void *value);
 #define RegisterMgmtCallback(_signal,_fn,_data) \
 pmgmt->registerMgmtCallback(_signal,_fn,_data)
 
-
 #define MAX_CONFIGS  100
-
 
 struct ConfigInfo
 {
@@ -67,6 +65,19 @@ class ConfigProcessor
 {
 public:
   ConfigProcessor();
+
+  template <typename ClassType, typename ConfigType>
+  struct scoped_config {
+    scoped_config() : ptr(ClassType::acquire()) {}
+    ~scoped_config() { ClassType::release(ptr); }
+
+    operator bool() const { return ptr != 0; }
+    operator const ConfigType * () const { return ptr; }
+    const ConfigType * operator->() const { return ptr; }
+
+  private:
+    ConfigType * ptr;
+  };
 
   unsigned int set(unsigned int id, ConfigInfo * info);
   ConfigInfo *get(unsigned int id);
