@@ -1,5 +1,8 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache Traffic Server 3.3.1
+
+  *) [TS-1608] IpAllow should use standard config update
+
   *) [TS-1580] Mutex leak plugged.
 
   *) [TS-1596] Added channel_stats plugin to experimental.
